# MLProject_TodoApp

./: Dockerfile.dev  Dockerfilefront.dev  README.md  crud.py  docker-compose.yml  main.py  pyproject.toml  test.db
frontend/: app.py
