[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
uvicorn = "^0.30.1"
streamlit = "^1.36.0"
pydantic = "^2.7.4"
pydemic = "^2020.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
